--- a/styles.css
+++ b/styles.css
@@ -357,6 +357,7 @@ nav a:hover:after {
     overflow: hidden;
     z-index: 1;
     box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.8);
+    cursor: pointer;
 }
 
 .btn-primary {
