--- a/styles.css
+++ b/styles.css
@@ -1179,3 +1179,7 @@ footer {
     transform: scale(0.95) translateY(2px);
     box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
 }
+
+a > .fa-link, a .fa-link {
+    text-decoration: none !important;
+}
